--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-countdown-circle-timer": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "socket.io-client": "^4.4.0",
